Change a11y low contrast issue

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,6 +1,6 @@
 $light-color: #FFFFFF;
 $dark-color: #272727;
-$third-color: #DA0037;
+$third-color: #e9053e;
 
 $breakpoint-mobile: 480px;
 
